<resources>
    <string name="app_name">KotlinFirebaseDb</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="submit">Submit</string>

    <string name="msg_color_warning_color">#FFCC00</string>
    <string name="msg_color_alert_color">#cc3300</string>
    <string name="msg_color_success_color">#339900</string>
    <string name="err_msg_firstname">Please enter firstname</string>
    <string name="err_msg_lastname">Please enter lastname</string>
    <string name="err_msg_email">Please enter email address</string>
    <string name="err_msg_valid_email">Please enter valid email address</string>
    <string name="err_msg_phone">Please enter phone number</string>
    <string name="err_msg_phone_digit">Please enter 10 digit phone number</string>
    <string name="err_msg_birthdate">Please select birthdate</string>
    <string name="err_msg_aboutme">Please enter about me</string>
    <string name="err_msg_address">Please enter address</string>
    <string name="err_msg_city">Please choose city</string>
    <string name="err_msg_state">Please choose state</string>
    <string name="err_msg_zip">Please enter zip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="err_msg_gender">Please select gender</string>
    <string name="about_me">About Me</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="no_data_found">No Data Found</string>
    <string name="err_msg_profile_image">Please select profile image</string>
    <string name="choose_state">Choose a State</string>
    <string name="choose_city">Choose a City</string>
    <string name="login">Login</string>
    <string name="type_message">Type message...</string>

    <string name="default_notification_channel_id">channel_001</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="clear_chat_message">Are you sure want to clear chat messages?</string>
    <string name="text_yes">YES</string>
    <string name="text_no">No</string>
    <string name="err_empty_message">Message can\'t be empty</string>
    <string name="msg_register_successful">Register done successfully</string>
    <string name="err_register_user">Error while registering user</string>
    <string name="msg_logout">Are you sure want to Logout ?</string>
    <string name="text_logout">Logout</string>
    <string name="msg_delete_record">Are you sure want to Delete this record ?</string>
    <string name="text_delete">Delete</string>
    <string name="text_message">Message</string>
    <string name="loading">Loading</string>
    <string name="msg_please_wait">Please Wait</string>
    <string name="msg_delete">Are you sure want to Delete this record ?</string>
    <string name="msg_sent_text">has sent you message. Do you want to open it ?</string>
</resources>
